@@ -25,32 +25,75 @@ public class ReportService {
     }
 
     public MonthlySummaryResponse monthlySummary(YearMonth month) {
+
         List<Sale> sales = fileStoreService.loadSales().stream()
                 .filter(s -> YearMonth.from(s.getSoldAt()).equals(month))
-                .toList();
+                .collect(Collectors.toList());
 
-        BigDecimal totalRevenue = sales.stream().map(Sale::grossRevenue).reduce(BigDecimal.ZERO, BigDecimal::add);
-        BigDecimal totalCost = sales.stream().map(Sale::getProductCost).reduce(BigDecimal.ZERO, BigDecimal::add);
-        BigDecimal totalFees = sales.stream().map(Sale::getMarketplaceFee).reduce(BigDecimal.ZERO, BigDecimal::add);
-        BigDecimal totalShipping = sales.stream().map(Sale::getShippingCost).reduce(BigDecimal.ZERO, BigDecimal::add);
-        BigDecimal totalProfit = sales.stream().map(Sale::getProfit).reduce(BigDecimal.ZERO, BigDecimal::add);
+        BigDecimal totalRevenue = sales.stream()
+                .map(Sale::grossRevenue)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
 
-        Map<String, List<Sale>> grouped = sales.stream().collect(Collectors.groupingBy(Sale::getSku));
+        BigDecimal totalCost = sales.stream()
+                .map(Sale::getProductCost)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        BigDecimal totalFees = sales.stream()
+                .map(Sale::getMarketplaceFee)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        BigDecimal totalShipping = sales.stream()
+                .map(Sale::getShippingCost)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        BigDecimal totalProfit = sales.stream()
+                .map(Sale::getProfit)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+        Map<String, List<Sale>> grouped = sales.stream()
+                .collect(Collectors.groupingBy(Sale::getSku));
 
         List<MonthlySummaryResponse.ProductSummary> products = new ArrayList<>();
+
         for (Map.Entry<String, List<Sale>> e : grouped.entrySet()) {
+
             List<Sale> list = e.getValue();
-            MonthlySummaryResponse.ProductSummary item = new MonthlySummaryResponse.ProductSummary();
+
+            MonthlySummaryResponse.ProductSummary item =
+                    new MonthlySummaryResponse.ProductSummary();
+
             item.setSku(e.getKey());
             item.setProductName(list.get(0).getProductName());
-            item.setQuantitySold(list.stream().mapToInt(Sale::getQuantity).sum());
-            item.setRevenue(list.stream().map(Sale::grossRevenue).reduce(BigDecimal.ZERO, BigDecimal::add));
-            item.setCost(list.stream().map(Sale::getProductCost).reduce(BigDecimal.ZERO, BigDecimal::add));
-            item.setProfit(list.stream().map(Sale::getProfit).reduce(BigDecimal.ZERO, BigDecimal::add));
+
+            item.setQuantitySold(
+                    list.stream()
+                            .mapToInt(Sale::getQuantity)
+                            .sum()
+            );
+
+            item.setRevenue(
+                    list.stream()
+                            .map(Sale::grossRevenue)
+                            .reduce(BigDecimal.ZERO, BigDecimal::add)
+            );
+
+            item.setCost(
+                    list.stream()
+                            .map(Sale::getProductCost)
+                            .reduce(BigDecimal.ZERO, BigDecimal::add)
+            );
+
+            item.setProfit(
+                    list.stream()
+                            .map(Sale::getProfit)
+                            .reduce(BigDecimal.ZERO, BigDecimal::add)
+            );
+
             products.add(item);
         }
 
         MonthlySummaryResponse response = new MonthlySummaryResponse();
+
         response.setMonth(month.toString());
         response.setTotalRevenue(totalRevenue);
         response.setTotalCost(totalCost);
@@ -58,22 +101,33 @@ public class ReportService {
         response.setTotalShipping(totalShipping);
         response.setTotalProfit(totalProfit);
         response.setProducts(products);
+
         return response;
     }
 
     public Path generateExcel(YearMonth month) {
+
         MonthlySummaryResponse summary = monthlySummary(month);
-        Path output = fileStoreService.getDataDir().resolve("fechamento-" + month + ".xlsx");
+
+        Path output = fileStoreService.getDataDir()
+                .resolve("fechamento-" + month + ".xlsx");
 
         try (Workbook workbook = new XSSFWorkbook()) {
+
             Sheet resumo = workbook.createSheet("Resumo");
             Sheet vendas = workbook.createSheet("Vendas");
             Sheet produtos = workbook.createSheet("Produtos");
 
             CellStyle headerStyle = createHeaderStyle(workbook);
 
+            // =========================
+            // ABA RESUMO
+            // =========================
+
             int r = 0;
+
             Row h = resumo.createRow(r++);
+
             createHeaderCell(h, 0, "Mês", headerStyle);
             createHeaderCell(h, 1, "Faturamento", headerStyle);
             createHeaderCell(h, 2, "Custos", headerStyle);
@@ -82,6 +136,7 @@ public class ReportService {
             createHeaderCell(h, 5, "Lucro", headerStyle);
 
             Row row = resumo.createRow(r++);
+
             row.createCell(0).setCellValue(summary.getMonth());
             row.createCell(1).setCellValue(summary.getTotalRevenue().doubleValue());
             row.createCell(2).setCellValue(summary.getTotalCost().doubleValue());
@@ -89,16 +144,39 @@ public class ReportService {
             row.createCell(4).setCellValue(summary.getTotalShipping().doubleValue());
             row.createCell(5).setCellValue(summary.getTotalProfit().doubleValue());
 
-            int rv = 0;
-            Row hv = vendas.createRow(rv++);
-            String[] saleHeaders = {"Data", "OrderId", "SKU", "Produto", "Qtd", "Venda Unit.", "Custo Total", "Taxa ML", "Frete", "Lucro"};
-            for (int i = 0; i < saleHeaders.length; i++) createHeaderCell(hv, i, saleHeaders[i], headerStyle);
+            // =========================
+            // ABA VENDAS
+            // =========================
 
-            List<Sale> sales = fileStoreService.loadSales().stream()
+            int rv = 0;
+
+            Row hv = vendas.createRow(rv++);
+
+            String[] saleHeaders = {
+                    "Data",
+                    "OrderId",
+                    "SKU",
+                    "Produto",
+                    "Qtd",
+                    "Venda Unit.",
+                    "Custo Total",
+                    "Taxa ML",
+                    "Frete",
+                    "Lucro"
+            };
+
+            for (int i = 0; i < saleHeaders.length; i++) {
+                createHeaderCell(hv, i, saleHeaders[i], headerStyle);
+            }
+
+            List<Sale> filteredSales = fileStoreService.loadSales().stream()
                     .filter(s -> YearMonth.from(s.getSoldAt()).equals(month))
-                    .toList();
-            for (Sale s : sales) {
+                    .collect(Collectors.toList());
+
+            for (Sale s : filteredSales) {
+
                 Row sr = vendas.createRow(rv++);
+
                 sr.createCell(0).setCellValue(s.getSoldAt().toString());
                 sr.createCell(1).setCellValue(s.getOrderId());
                 sr.createCell(2).setCellValue(s.getSku());
@@ -111,13 +189,31 @@ public class ReportService {
                 sr.createCell(9).setCellValue(s.getProfit().doubleValue());
             }
 
+            // =========================
+            // ABA PRODUTOS
+            // =========================
+
             int rp = 0;
+
             Row hp = produtos.createRow(rp++);
-            String[] prodHeaders = {"SKU", "Produto", "Vendidos", "Receita", "Custo", "Lucro"};
-            for (int i = 0; i < prodHeaders.length; i++) createHeaderCell(hp, i, prodHeaders[i], headerStyle);
+
+            String[] prodHeaders = {
+                    "SKU",
+                    "Produto",
+                    "Vendidos",
+                    "Receita",
+                    "Custo",
+                    "Lucro"
+            };
+
+            for (int i = 0; i < prodHeaders.length; i++) {
+                createHeaderCell(hp, i, prodHeaders[i], headerStyle);
+            }
 
             for (MonthlySummaryResponse.ProductSummary p : summary.getProducts()) {
+
                 Row pr = produtos.createRow(rp++);
+
                 pr.createCell(0).setCellValue(p.getSku());
                 pr.createCell(1).setCellValue(p.getProductName());
                 pr.createCell(2).setCellValue(p.getQuantitySold());
@@ -133,27 +229,42 @@ public class ReportService {
             try (OutputStream os = Files.newOutputStream(output)) {
                 workbook.write(os);
             }
+
             return output;
+
         } catch (IOException e) {
             throw new RuntimeException("Erro ao gerar Excel", e);
         }
     }
 
     private CellStyle createHeaderStyle(Workbook workbook) {
+
         Font font = workbook.createFont();
         font.setBold(true);
+
         CellStyle style = workbook.createCellStyle();
         style.setFont(font);
+
         return style;
     }
 
-    private void createHeaderCell(Row row, int col, String value, CellStyle style) {
+    private void createHeaderCell(
+            Row row,
+            int col,
+            String value,
+            CellStyle style
+    ) {
+
         Cell cell = row.createCell(col);
+
         cell.setCellValue(value);
         cell.setCellStyle(style);
     }
 
     private void autoSize(Sheet sheet, int columns) {
-        for (int i = 0; i < columns; i++) sheet.autoSizeColumn(i);
+
+        for (int i = 0; i < columns; i++) {
+            sheet.autoSizeColumn(i);
+        }
     }
 }
